# opencv

hellocv_cpp/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
